# codexel

./: .gitignore  AGENTS.md  CHANGELOG.md
.github/workflows/: homebrew-cask-codexel.yml  npm-publish-codexel.yml
codex-cli/: package-lock.json  package.json
codex-cli/scripts/: install_native_deps.py
codex-rs/: Cargo.toml
codex-rs/app-server/: Cargo.toml  README.md
codex-rs/app-server/src/: codex_message_processor.rs
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: main.rs  mcp_cmd.rs
codex-rs/cli/tests/: execpolicy.rs  mcp_add_remove.rs  mcp_list.rs
codex-rs/common/src/: config_summary.rs
codex-rs/core/: Cargo.toml
codex-rs/core/src/: codex.rs  codex_delegate.rs  conversation_manager.rs  features.rs  lib.rs  lsp_prompt.rs
codex-rs/docs/: protocol_v1.md
codex-rs/exec/src/: event_processor_with_human_output.rs  lib.rs
codex-rs/lsp/: Cargo.toml
codex-rs/lsp/src/: jsonrpc.rs  lib.rs  lsp.rs  normalize.rs  servers.rs  status.rs  watcher.rs
codex-rs/mcp-server/src/: lib.rs
codex-rs/protocol/src/: protocol.rs
codex-rs/tui/: Cargo.toml
codex-rs/tui/src/: app.rs  app_event.rs  chatwidget.rs  history_cell.rs  key_hint.rs  lib.rs  lsp_status.rs  slash_command.rs  status_indicator_widget.rs
codex-rs/tui2/: Cargo.toml  tooltips.txt
codex-rs/tui2/src/: app.rs  app_backtrack.rs  app_event.rs  chatwidget.rs  get_git_changed_files.rs  history_cell.rs  key_hint.rs  lib.rs  lsp_status.rs  slash_command.rs
docs/: config.md  example-config.md  exec.md  getting-started.md  skills.md  slash_commands.md
scripts/: gen-changelog.ps1  gen-changelog.sh
(+61 files in other folders)
