[package]
name = "codex-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
dunce.workspace = true
ignore.workspace = true
notify.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "macros", "process", "rt", "sync", "time"] }
tracing.workspace = true
url.workspace = true
which.workspace = true
wildmatch.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
